manifests/api-orquestador-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-orquestador-service
spec:
  selector:
    app: api-orquestador
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
