manifests/api-orquestador-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-orquestador-ingress
  annotations:
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: admision-cert

spec:
  tls:
    - hosts:
      - desa.orquestador.admision.40.121.134.234.nip.io 
      secretName: admision-web-cert
  rules:
  - host: desa.orquestador.admision.40.121.134.234.nip.io 
    http:
      paths:
      - backend:
          serviceName: api-orquestador-service
          servicePort: 80
        path: /
